- API Addition: Added IntArray#replaceFirst and IntArray#replaceAll
- API Addition: Added LongArray#replaceFirst and LongArray#replaceAll
- API Addition: Added ShortArray#replaceFirst and ShortArray#replaceAll
- API Addition: Added SnapshotArray#replaceFirst and SnapshotArray#replaceAll
- API Addition: Actors that implement `getStyle` and `setStyle` should now implement the `Styleable` interface
- Android: Fixed rare NPE when `onDestroy` was called
- API Deprecation: Deprecated ReflectionPool and the related Pools#get/Pools#obtain method. Please use the new DefaultPool with the new Pools#get/Pools#obtain methods. They offer more safety and can be used with the java 8 method reference syntax (e.g. Pools.get(MyClass::new))
- API Deprecation: Deprecated constructors taking a "Class" for Queue/ArrayMap/Array. Please use the constructors utilising "ArraySupplier". They offer more safety and can be used with the java 8 method reference syntax (e.g. MyClass[]::new)

[1.13.1]
- [BREAKING CHANGE] Android: Since 1.13.0 libGDX requires setting `android.useAndroidX=true` in your gradle.properties file. In 1.13.1 it is NO longer needed to define the `androidx.core:core` dependency in your Android module.
- [BREAKING CHANGE] BaseTmxMapLoader no longer parses point objects into zero-sized RectangleMapObject. Instead, points are now represented with PointMapObject
- iOS: Update to MobiVM 2.3.22
- iOS: Fixes Gdx.openURI() not working on iOS 18.1 Simulator.
- Change visibility of PolygonSpriteBatch.switchTexture() to protected
- Added XmlReader.getChildren() and XmlReader.replaceChild()
- LWJGL3: Fix pauseWhenLostFocus not working as expected
- LWJGL 3: Downgrade to 3.3.3 due to AV false positives on 3.3.4 and OpenAL log spamming issue on 3.3.5.
- API Addition: Added FPSLogger#setBound
- Android: Fix crash on startup if `setContentView` was manually called after `initializeForView`
- API Addition: Added Array#replaceFirst and Array#replaceAll